fix bugs when viewing on mobile devices where x-overflow elements would disappear.

--- a/react/src/index.css
+++ b/react/src/index.css
@@ -21,8 +21,9 @@ body {
 }
 
 .horizontal-scroll {
-    overflow-x: auto;
+    overflow-x: scroll;
     white-space: nowrap;
+    overflow-scrolling: touch;
     -webkit-overflow-scrolling: touch;
 }
 
